tests/ui/const-generics/opaque_types2.stderr
error[E0391]: cycle detected when computing type of `Foo::{opaque#0}`
  --> $DIR/opaque_types2.rs:3:12
   |
LL | type Foo = impl Sized;
   |            ^^^^^^^^^^
   |
note: ...which requires computing type of opaque `Foo::{opaque#0}`...
  --> $DIR/opaque_types2.rs:3:12
   |
LL | type Foo = impl Sized;
   |            ^^^^^^^^^^
note: ...which requires type-checking `bar`...
  --> $DIR/opaque_types2.rs:10:1
   |
LL | / fn bar()
LL | | where
LL | |     Foo:,
   | |_________^
note: ...which requires evaluating type-level constant...
  --> $DIR/opaque_types2.rs:14:11
   |
LL |     foo::<C>();
   |           ^
note: ...which requires const-evaluating + checking `bar::{constant#0}`...
  --> $DIR/opaque_types2.rs:14:11
   |
LL |     foo::<C>();
   |           ^
note: ...which requires caching mir of `bar::{constant#0}` for CTFE...
  --> $DIR/opaque_types2.rs:14:11
   |
LL |     foo::<C>();
   |           ^
note: ...which requires elaborating drops for `bar::{constant#0}`...
  --> $DIR/opaque_types2.rs:14:11
   |
LL |     foo::<C>();
   |           ^
   = note: ...which requires normalizing `Foo`...
   = note: ...which again requires computing type of `Foo::{opaque#0}`, completing the cycle
note: cycle used when checking that `Foo::{opaque#0}` is well-formed
  --> $DIR/opaque_types2.rs:3:12
   |
LL | type Foo = impl Sized;
   |            ^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

note: erroneous constant encountered
  --> $DIR/opaque_types2.rs:14:11
   |
LL |     foo::<C>();
   |           ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
